another attempt at fixing alignment issues

--- a/application.css
+++ b/application.css
@@ -77,7 +77,7 @@ body{
 #animalText,
 #reuText,
 #presText,
-#afflabInfo,
+#afflabText,
 #projInfo{
   color:white;
   font-size: 2.5em;
